--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="google-signin-client_id" content="612962475312-4df334nmjgojkp1viietsk2ns7prirvq.apps.googleusercontent.com.apps.googleusercontent.com">
     <title>ROUTEMIND</title>
     <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
@@ -23,7 +24,7 @@
 
     <div id="main" class="container" style="display: none; height:120px;">
         <h1 id="title">ROUTEMIND</h1>
-        <input type="file" id="imageInput" accept="image/*">
+        <input type="file" id="imageInput" multiple accept="image/*">
         <button id="processBtn" disabled>Process Image</button>
         <div id="addressList"></div>
         <div id="extractedAddresses"></div>
@@ -34,7 +35,6 @@
         <div id="map" style="height: 400px; width: 100%; margin-top: 20px;"></div>
         <div id="depotSelectContainer"></div>
          <button id="openMapsBtn" >Open in Google Maps</button>
-
     </div>
 
     <script src="config.js"></script>
